Update for TFServing 1.14.0 and fix tutorial bugs

--- a/docs/object_detection/tensorflow_serving/ObjectDetection.ipynb
+++ b/docs/object_detection/tensorflow_serving/ObjectDetection.ipynb
@@ -151,7 +151,7 @@
     "    channel = grpc.insecure_channel(SERVER_URL)\n",
     "    stub = prediction_service_pb2_grpc.PredictionServiceStub(channel)\n",
     "    request = predict_pb2.PredictRequest()\n",
-    "    request.model_spec.name = 'ssdmobilenet'\n",
+    "    request.model_spec.name = MODEL\n",
     "    request.model_spec.signature_name = 'serving_default'\n",
     "    request.inputs['inputs'].CopyFrom(tf.contrib.util.make_tensor_proto(np_image))\n",
     "    result = stub.Predict(request)\n",
