Perf analysis notebooks among different data types (fp32/bf16/int8)

--- a/docs/notebooks/perf_analysis/benchmark_perf_timeline_analysis.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_timeline_analysis.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FdIndex = 0"
+    "FdIndex = 3"
    ]
   },
   {
@@ -165,6 +165,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **Users can bypass below Section 1.1 and analyze performance among Stock and Intel TF by clicking the link : [Section 1_2](#section_1_2).**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='section_1_1'></a>\n",
     "## Section 1.1: Performance Analysis for one TF Timeline result\n",
     "### Step 1: Pick one of the Timeline files\n",
     "#### List out all the Timeline files first\n"
@@ -283,6 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='section_1_2'></a>\n",
     "## Section 1.2: Analyze TF Timeline results between Stock and Intel Tensorflow\n",
     "### Speedup from MKL-DNN among different TF operations"
    ]
@@ -291,14 +300,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Select  one Intel and one Stock TF timeline files for analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### List out different kind of timeline files according to its network topology and data type"
+    "### Step 1: Select  one Intel and one Stock TF timeline files for analysis\n",
+    "#### List out all timeline files in the selected folder"
    ]
   },
   {
@@ -310,22 +313,18 @@
     "if len(datafiles) is 1:\n",
     "    print(\"ERROR! There is only 1 json file in the selected folder.\")\n",
     "    print(\"Please select other Timeline folder from beginnning to proceed Section 1.2.\")\n",
-    "tindex = int(len(datafiles)/2)\n",
-    "types = datafiles[:tindex]\n",
-    "index = 0\n",
-    "for t in types:\n",
-    "    t=t.split('/')[1]\n",
-    "    t = t.strip(\"mkl\")\n",
-    "    t = t.strip(\"stock\")\n",
-    "    print(\" %d : %s \" %(index, t))\n",
-    "    index+=1"
+    "\n",
+    "for i in range(len(datafiles)):\n",
+    "    print(\" %d : %s \" %(i, datafiles[i]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ACTION: Please select one kind of timeline files and change type_index accordingly"
+    "#### ACTION: Please select one timeline file as a perfomance baseline and the other as a comparison target\n",
+    "put the related index for your selected timeline file.\n",
+    "In general, please put stock_timeline_xxxxx as the baseline."
    ]
   },
   {
@@ -334,7 +333,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type_index = 0"
+    "# perfomance baseline \n",
+    "Baseline_Index=1\n",
+    "# comparison target\n",
+    "Comparison_Index=0"
    ]
   },
   {
@@ -351,8 +353,8 @@
    "outputs": [],
    "source": [
     "selected_datafiles = []\n",
-    "selected_datafiles.append(datafiles[type_index])\n",
-    "selected_datafiles.append(datafiles[type_index + tindex])\n",
+    "selected_datafiles.append(datafiles[Baseline_Index])\n",
+    "selected_datafiles.append(datafiles[Comparison_Index])\n",
     "print(selected_datafiles)"
    ]
   },
@@ -371,6 +373,8 @@
    "source": [
     "%matplotlib agg\n",
     "from profiling.profile_utils import TFTimelinePresenter\n",
+    "csvfiles=[]\n",
+    "\n",
     "tfp = TFTimelinePresenter(True)\n",
     "for fn in selected_datafiles:\n",
     "    if fn.find('/'):\n",
@@ -380,7 +384,9 @@
     "    tfile_name= fn_nofd.split('.')[0]\n",
     "    tfile_prefix = fn_nofd.split('_')[0]\n",
     "    tfile_postfix = fn_nofd.strip(tfile_prefix)[1:]\n",
-    "    print(tfile_name)\n",
+    "    csvpath = TimelineFd +os.sep+tfile_name+'.csv'\n",
+    "    print(csvpath)\n",
+    "    csvfiles.append(csvpath)\n",
     "    timeline_pd = tfp.postprocess_timeline(tfp.read_timeline(fn))\n",
     "    timeline_pd = timeline_pd[timeline_pd['ph'] == 'X']\n",
     "    tfp.get_tf_ops_time(timeline_pd,fn,tfile_prefix)"
@@ -390,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3: List out result files among different runs"
+    "### Step 3: Pre-processing for the two CSV files"
    ]
   },
   {
@@ -401,10 +407,10 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "csvfiles = [TimelineFd +os.sep+ x for x in os.listdir(TimelineFd) if '.csv' == x[-4:]]\n",
+    "\n",
     "csvarray=[]\n",
     "for csvf in csvfiles:\n",
-    "    print(csvf)\n",
+    "    print(\"read into pandas :\",csvf)\n",
     "    a = pd.read_csv(csvf)\n",
     "    csvarray.append(a)\n",
     "\n",
@@ -452,7 +458,7 @@
     "%matplotlib inline\n",
     "print(fpath)\n",
     "tfp.plot_compare_bar_charts(fpath)\n",
-    "tfp.plot_compare_ratio_bar_charts(fpath)"
+    "tfp.plot_compare_ratio_bar_charts(fpath, tags=['','oneDNN ops'])"
    ]
   },
   {
@@ -483,9 +489,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stock-tensorflow",
+   "display_name": "intel-tensorflow",
    "language": "python",
-   "name": "stock-tensorflow"
+   "name": "intel-tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
@@ -497,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
