Jupyter on docker CPU info bugfix

--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
@@ -270,57 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4.1: User can also manually set batch size and number of threads"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import psutil\n",
-    "import subprocess\n",
-    "import os\n",
-    "cpu_count = psutil.cpu_count(logical=False)\n",
-    "cpu_socket_count =  int(subprocess.check_output('cat /proc/cpuinfo | grep \"physical id\" | sort -u | wc -l', shell=True))\n",
-    "print(\"CPU count per socket:\" ,  cpu_count ,\" \\nSocket count:\",cpu_socket_count)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ACTION: Users can change the value of thread_number and batch_size to see different performance\n",
-    "1. thread_umber: the value will apply to num_cores parameters in launch_benchmark.py  \n",
-    "2. utilized_socket_number:  the value will apply to the socket-id parameter in launch_benchmark.py \n",
-    "3. num_inter_threads: the value will  apply to the num-inter-threads parameter in launch_benchmark.py \n",
-    "4. num_intra_threads: the value will  apply to the num-intra-threads parameter in launch_benchmark.py \n",
-    "5. batch_size: the value will apply to the batch_size parameter in launch_benchmark.py \n",
-    "6. log_folder: the folder where the logs are stored.\n",
-    "7. accuracy_only : mark as True if users want to evaluate model accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## USER INPUT\n",
-    "thread_number=cpu_count \n",
-    "utilized_socket_number=1 #cpu_socket_count\n",
-    "num_inter_threads = utilized_socket_number\n",
-    "num_intra_threads = thread_number\n",
-    "batch_size=32\n",
-    "log_folder=os.getcwd() + os.sep + \"logs\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 4.2: Check mandatory file \"launch_benchmark.py\""
+    "### Step 4.1: Check mandatory file \"launch_benchmark.py\""
    ]
   },
   {
@@ -351,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Check those mandatory python scripts after users assign ModelRooRoot and ProfileUtilsRoot"
+    "#### Check those mandatory python scripts after users assign ModelZooRoot and ProfileUtilsRoot"
    ]
   },
   {
@@ -373,6 +323,74 @@
     "    print(profile_utils_path)\n",
     "else:\n",
     "    print(\"ERROR! Can't find profile_utils script!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import Model Zoo CPU info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(os.environ['ModelZooRoot']+os.sep+'benchmarks/common/')\n",
+    "from platform_util import CPUInfo \n",
+    "cpu_info = CPUInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4.2: User can also manually set batch size and number of threads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psutil\n",
+    "import subprocess\n",
+    "import os\n",
+    "cpu_count = cpu_info.cores_per_socket\n",
+    "cpu_socket_count =  cpu_info.sockets\n",
+    "print(\"CPU count per socket:\" ,  cpu_count ,\" \\nSocket count:\",cpu_socket_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ACTION: Users can change the value of thread_number and batch_size to see different performance\n",
+    "1. thread_umber: the value will apply to num_cores parameters in launch_benchmark.py  \n",
+    "2. utilized_socket_number:  the value will apply to the socket-id parameter in launch_benchmark.py \n",
+    "3. num_inter_threads: the value will  apply to the num-inter-threads parameter in launch_benchmark.py \n",
+    "4. num_intra_threads: the value will  apply to the num-intra-threads parameter in launch_benchmark.py \n",
+    "5. batch_size: the value will apply to the batch_size parameter in launch_benchmark.py \n",
+    "6. log_folder: the folder where the logs are stored.\n",
+    "7. accuracy_only : mark as True if users want to evaluate model accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## USER INPUT\n",
+    "thread_number=cpu_count \n",
+    "utilized_socket_number=1 #cpu_socket_count\n",
+    "num_inter_threads = utilized_socket_number\n",
+    "num_intra_threads = thread_number\n",
+    "batch_size=32\n",
+    "log_folder=os.getcwd() + os.sep + \"logs\""
    ]
   },
   {
@@ -989,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
