--- a/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
@@ -142,6 +142,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Step 2.2: Check mandatory file \"launch_benchmark.py\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ACTION: Users should change the value of os.environ['ModelZooRoot'] according to their environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# Users should change ModelZooRoot path according to their environment\n",
+    "## USER INPUT\n",
+    "current_path = os.getcwd()\n",
+    "os.environ['ModelZooRoot'] = current_path + \"/../../../\"\n",
+    "os.environ['ProfileUtilsRoot'] = os.environ['ModelZooRoot'] + \"docs/notebooks/perf_analysis/profiling/\"\n",
+    "print(os.environ['ModelZooRoot'])\n",
+    "print(os.environ['ProfileUtilsRoot'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check those mandatory python scripts after users assign ModelZooRoot and ProfileUtilsRoot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "current_path = os.getcwd()\n",
+    "benchmark_path = os.environ['ModelZooRoot'] + \"benchmarks/launch_benchmark.py\"\n",
+    "if os.path.exists(benchmark_path) == True:\n",
+    "    print(benchmark_path)\n",
+    "else:\n",
+    "    print(\"ERROR! Can't find benchmark script!\")\n",
+    "    \n",
+    "profile_utils_path = os.environ['ProfileUtilsRoot'] + \"profile_utils.py\"\n",
+    "if os.path.exists(profile_utils_path) == True:\n",
+    "    print(profile_utils_path)\n",
+    "else:\n",
+    "    print(\"ERROR! Can't find profile_utils script!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import Model Zoo CPU info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(os.environ['ModelZooRoot']+os.sep+'benchmarks/common/')\n",
+    "from platform_util import CPUInfo \n",
+    "cpu_info = CPUInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Step 2.3: User can also manually set batch size and number of threads"
    ]
   },
@@ -154,8 +230,8 @@
     "import psutil\n",
     "import subprocess\n",
     "import os\n",
-    "cpu_count = psutil.cpu_count(logical=False)\n",
-    "cpu_socket_count =  int(subprocess.check_output('cat /proc/cpuinfo | grep \"physical id\" | sort -u | wc -l', shell=True))\n",
+    "cpu_count = cpu_info.cores_per_socket\n",
+    "cpu_socket_count =  cpu_info.sockets\n",
     "print(\"CPU count per socket:\" ,  cpu_count ,\" \\nSocket count:\",cpu_socket_count)"
    ]
   },
@@ -187,64 +263,6 @@
     "num_intra_threads = thread_number\n",
     "batch_size=32\n",
     "log_folder=os.getcwd() + os.sep + \"logs\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 2.4: Check mandatory file \"launch_benchmark.py\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ACTION: Users should change the value of os.environ['ModelZooRoot'] according to their environment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# Users should change ModelZooRoot path according to their environment\n",
-    "## USER INPUT\n",
-    "current_path = os.getcwd()\n",
-    "os.environ['ModelZooRoot'] = current_path + \"/../../../\"\n",
-    "os.environ['ProfileUtilsRoot'] = os.environ['ModelZooRoot'] + \"docs/notebooks/perf_analysis/profiling/\"\n",
-    "print(os.environ['ModelZooRoot'])\n",
-    "print(os.environ['ProfileUtilsRoot'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Check those mandatory python scripts after users assign ModelRooRoot and ProfileUtilsRoot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "current_path = os.getcwd()\n",
-    "benchmark_path = os.environ['ModelZooRoot'] + \"benchmarks/launch_benchmark.py\"\n",
-    "if os.path.exists(benchmark_path) == True:\n",
-    "    print(benchmark_path)\n",
-    "else:\n",
-    "    print(\"ERROR! Can't find benchmark script!\")\n",
-    "    \n",
-    "profile_utils_path = os.environ['ProfileUtilsRoot'] + \"profile_utils.py\"\n",
-    "if os.path.exists(profile_utils_path) == True:\n",
-    "    print(profile_utils_path)\n",
-    "else:\n",
-    "    print(\"ERROR! Can't find profile_utils script!\")"
    ]
   },
   {
@@ -629,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
