fixing issues for perf analysis notebooks

--- a/docs/notebooks/perf_analysis/benchmark_perf_timeline_analysis.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_timeline_analysis.ipynb
@@ -15,6 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> NOTE: Users could also compare elapsed time of TF ops among any two different TF timeline files.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"images\\compared_tf_op_duration_ratio_bar.png\" width=\"700\">"
    ]
   },
@@ -38,6 +45,17 @@
    "metadata": {},
    "source": [
     "# Get Platform Information "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ignore all warning messages\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -134,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FdIndex = 3"
+    "FdIndex = 0"
    ]
   },
   {
@@ -293,6 +311,8 @@
    "source": [
     "<a id='section_1_2'></a>\n",
     "## Section 1.2: Analyze TF Timeline results between Stock and Intel Tensorflow\n",
+    "> NOTE : Users could also compare elapsed time of TF ops among any two different TF timeline files.\n",
+    "\n",
     "### Speedup from MKL-DNN among different TF operations"
    ]
   },
@@ -301,6 +321,8 @@
    "metadata": {},
    "source": [
     "### Step 1: Select  one Intel and one Stock TF timeline files for analysis\n",
+    "> NOTE: Users could also pick any two different TF timeline files.\n",
+    "\n",
     "#### List out all timeline files in the selected folder"
    ]
   },
@@ -408,14 +430,34 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "csvarray=[]\n",
+    "csvarray = []\n",
+    "csvfilenames= []\n",
     "for csvf in csvfiles:\n",
     "    print(\"read into pandas :\",csvf)\n",
     "    a = pd.read_csv(csvf)\n",
     "    csvarray.append(a)\n",
+    "    if csvf.find(os.sep) > 0:\n",
+    "        csvfilenames.append(csvf.split(os.sep)[-1])\n",
+    "    else:\n",
+    "        csvfilenames.append(csvf)\n",
     "\n",
     "a = csvarray[0]\n",
     "b = csvarray[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find tags among CSV files\n",
+    "tags=[]\n",
+    "from profiling.profile_utils import PerfPresenter\n",
+    "perfp=PerfPresenter()\n",
+    "tag0, tag1 = perfp.get_diff_from_csv_filenames(csvfilenames[0][:-4],csvfilenames[1][:-4])\n",
+    "tags = [tag0, tag1]\n",
+    "print('tags : ',tags)"
    ]
   },
   {
@@ -423,6 +465,13 @@
    "metadata": {},
    "source": [
     "### Step 4: Merge two CSV files and caculate the speedup accordingly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merge two csv files"
    ]
   },
   {
@@ -436,17 +485,38 @@
     "fdir='merged'\n",
     "if not os.path.exists(fdir):\n",
     "    os.mkdir(fdir)\n",
-    "    \n",
-    "fpath=fdir+os.sep+'merged.csv'\n",
-    "merged=tfp.merge_two_csv_files(fpath,a,b)\n",
-    "merged"
+    "\n",
+    "fpaths=[]\n",
+    "fpaths.append(fdir+os.sep+'merged.csv')\n",
+    "fpaths.append(fdir+os.sep+'diff_'+tags[0]+'.csv')\n",
+    "fpaths.append(fdir+os.sep+'diff_'+tags[1]+'.csv')\n",
+    "#merged=tfp.merge_two_csv_files(fpath,a,b)\n",
+    "merged=tfp.merge_two_csv_files_v2(fpaths, a, b, tags)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5: Draw a bar chart for elapsed time of TF ops among stock TF and Intel TF"
+    "### Compare common operations among those two csv files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Compare common operations between \", tags)\n",
+    "merged_df = pd.read_csv(fpaths[0])\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The unique Tensorflow operations from the first csv/Timline file"
    ]
   },
   {
@@ -456,9 +526,53 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "print(fpath)\n",
-    "tfp.plot_compare_bar_charts(fpath)\n",
-    "tfp.plot_compare_ratio_bar_charts(fpath, tags=['','oneDNN ops'])"
+    "print(\"Operations are only in\", tags[0], \" run\")\n",
+    "extra1 = pd.read_csv(fpaths[1])\n",
+    "extra1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The unique Tensorflow operations from the second csv/Timline file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Operations are only in\", tags[1], \" run\")\n",
+    "extra2 = pd.read_csv(fpaths[2])\n",
+    "extra2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5: Draw a bar chart for elapsed time of common TF ops among stock TF and Intel TF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> NOTE: Users could also compare elapsed time of TF ops among any two different TF timeline files.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "print(fpaths[0])\n",
+    "tfp.plot_compare_bar_charts(fpaths[0], tags=tags)\n",
+    "tfp.plot_compare_ratio_bar_charts(fpaths[0], tags=['','oneDNN ops'], max_speedup=20)"
    ]
   },
   {
@@ -469,6 +583,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> NOTE: Users could also compare elapsed time of TF ops among any two different TF timeline files.\n",
+    "\n",
+    "We will have following pie charts in sequence:\n",
+    "1. the pie chart for elpased time of TF ops from stock TF or the first csv/Timeline file\n",
+    "2. the pie chart for elpased time of unique TF ops from stock TF or the first csv/Timeline file\n",
+    "3. the pie chart for elpased time of TF ops from Intel TF or the second csv/Timeline file\n",
+    "4. the pie chart for elpased time of unique TF ops from Intel TF or the second csv/Timeline file\n",
+    "5. the pie chart for elpased time of common TF ops among stock & Intel TF or two csv/Timeline files\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of TF ops from Stock TF or the first csv/Timline file\n",
+    "understand which TF operations spend most of time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(csvfiles[0], tags[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of  unique TF operations from Stock TF or the first csv/Timline file\n",
+    "understand if there is any unique TF operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(fpaths[1], tags[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of TF ops from Intel TF or the second csv/Timline file\n",
+    "understand which TF operations spend most of time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(csvfiles[1], tags[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of  unique TF operations from Intel TF or the seond csv/Timline file\n",
+    "understand if there is any unique TF operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(fpaths[2], tags[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of common TF ops among Stock & Intel TF or  two csv/Timline files\n",
+    "understand top hotspots differences among Stock & Intel TF or two csv/Timeline files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -476,7 +680,7 @@
    },
    "outputs": [],
    "source": [
-    "tfp.plot_compare_pie_charts(fpath)"
+    "tfp.plot_compare_pie_charts(fpaths[0], tags=tags)"
    ]
   },
   {
