--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_timeline_analysis.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_timeline_analysis.ipynb
@@ -215,9 +215,9 @@
    "outputs": [],
    "source": [
     "# perfomance baseline \n",
-    "Baseline_Index=1\n",
+    "Baseline_Index=0\n",
     "# comparison target\n",
-    "Comparison_Index=0"
+    "Comparison_Index=1"
    ]
   },
   {
@@ -373,10 +373,50 @@
     "fdir='merged'\n",
     "if not os.path.exists(fdir):\n",
     "    os.mkdir(fdir)\n",
-    "    \n",
-    "fpath=fdir+os.sep+'merged.csv'\n",
-    "merged=tfp.merge_two_csv_files_v2(fpath, a, b, tags)\n",
+    "\n",
+    "fpaths=[]\n",
+    "fpaths.append(fdir+os.sep+'merged.csv')\n",
+    "fpaths.append(fdir+os.sep+'diff_'+tags[0]+'.csv')\n",
+    "fpaths.append(fdir+os.sep+'diff_'+tags[1]+'.csv')\n",
+    "merged=tfp.merge_two_csv_files_v2(fpaths, a, b, tags)\n",
     "merged"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The unique Tensorflow operations from the first csv/Timline file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "print(\"Operations are only in\", tags[0], \" run\")\n",
+    "extra1 = pd.read_csv(fpaths[1])\n",
+    "extra1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The unique Tensorflow operations from the second csv/Timline file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Operations are only in\", tags[1], \" run\")\n",
+    "extra2 = pd.read_csv(fpaths[2])\n",
+    "extra2"
    ]
   },
   {
@@ -396,9 +436,9 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "print(fpath)\n",
-    "tfp.plot_compare_bar_charts(fpath, tags=tags)\n",
-    "tfp.plot_compare_ratio_bar_charts(fpath, tags=['','oneDNN ops'])"
+    "print(fpaths[0])\n",
+    "tfp.plot_compare_bar_charts(fpaths[0], tags=tags)\n",
+    "tfp.plot_compare_ratio_bar_charts(fpaths[0], tags=['','oneDNN ops'])"
    ]
   },
   {
@@ -410,6 +450,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> NOTE: Users could also compare elapsed time of TF ops among any two different TF timeline files.\n",
+    "\n",
+    "We will have following pie charts in sequence:\n",
+    "1. the pie chart for elpased time of TF ops from stock TF or the first csv/Timeline file\n",
+    "2. the pie chart for elpased time of unique TF ops from stock TF or the first csv/Timeline file\n",
+    "3. the pie chart for elpased time of TF ops from Intel TF or the second csv/Timeline file\n",
+    "4. the pie chart for elpased time of unique TF ops from Intel TF or the second csv/Timeline file\n",
+    "5. the pie chart for elpased time of common TF ops among stock & Intel TF or two csv/Timeline files\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of TF ops from the first csv/Timline file\n",
+    "understand which TF operations spend most of time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(csvfiles[0], tags[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of  unique TF operations from the first csv/Timline file\n",
+    "understand if there is any unique TF operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(fpaths[1], tags[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of TF ops from the second csv/Timline file\n",
+    "understand which TF operations spend most of time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(csvfiles[1], tags[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of  unique TF operations from the second csv/Timline file\n",
+    "understand if there is any unique TF operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfp.plot_pie_chart(fpaths[2], tags[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The pie chart for elapsed time of common TF ops among  two csv/Timline files\n",
+    "understand top hotspots differences among two csv/Timeline files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -417,17 +547,21 @@
    },
    "outputs": [],
    "source": [
-    "tfp.plot_compare_pie_charts(fpath, tags=tags)"
+    "tfp.plot_compare_pie_charts(fpaths[0], tags=tags)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section_2_1'></a>\n",
-    "## Section 2.1: Analyze oneDNN/MKLDNN debug logs and JIT dumps\n",
+    "<a id='section_2_2'></a>\n",
+    "## Section 2.2: Analyze oneDNN/MKLDNN debug logs and JIT dumps\n",
     "\n",
-    "### Step 1: Parse related oneDNN Verbose logs\n"
+    ">NOTE: Section 2.2 is only relevant if user had MKLDNN_VERBOSE or MKLDNN_JIT_DUMP enabled\n",
+    "\n",
+    "### Step 1: Parse related oneDNN Verbose logs\n",
+    "\n",
+    ">NOTE: Step 1-3 is only relevant if user had MKLDNN_VERBOSE enabled."
    ]
   },
   {
@@ -525,6 +659,9 @@
    "metadata": {},
    "source": [
     "### Step 4: Inspect JIT Kernel \n",
+    "\n",
+    ">NOTE: Step 4 is only relevant if user had MKLDNN_JIT_DUMP enabled\n",
+    "\n",
     "In this section, we analyze dump JIT files of the comparison data type.    \n",
     "Users should be able to see the exact CPU instruction usage like VNNI or BF16 from those JIT Dump files."
    ]
