fixing issues for perf analysis notebooks

--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
@@ -103,6 +103,9 @@
    "source": [
     "import sys\n",
     "from profiling.profile_utils import ConfigFile\n",
+    "\n",
+    "accuracy_only=False\n",
+    "\n",
     "config = ConfigFile()\n",
     "df, df_types, df_types_obj = config.convert_configs_to_pd_dataframe()\n",
     "\n",
@@ -137,7 +140,7 @@
    "source": [
     "# User picks a benchmark type\n",
     "## USER INPUT\n",
-    "selected_index = 1"
+    "selected_index = 0"
    ]
   },
   {
@@ -374,8 +377,7 @@
     "3. num_inter_threads: the value will  apply to the num-inter-threads parameter in launch_benchmark.py \n",
     "4. num_intra_threads: the value will  apply to the num-intra-threads parameter in launch_benchmark.py \n",
     "5. batch_size: the value will apply to the batch_size parameter in launch_benchmark.py \n",
-    "6. log_folder: the folder where the logs are stored.\n",
-    "7. accuracy_only : mark as True if users want to evaluate model accuracy"
+    "6. log_folder: the folder where the logs are stored.\n"
    ]
   },
   {
@@ -410,7 +412,7 @@
     "# Get the parameters from config\n",
     "config = ConfigFile()\n",
     "config.read_config(topology_name)\n",
-    "if config.data_download != '':\n",
+    "if config.data_download != '' and config.data_location == '':\n",
     "    print(\"\\nPlease follow below command to get the data : \")\n",
     "    val = config.read_value_from_section(topology_name, 'data-download')\n",
     "    print(val)\n",
@@ -433,7 +435,7 @@
    "source": [
     "#### (OPTIONAL) ACTION: Users set the configurations in topo.ini for those required data and files\n",
     "1. data_download_path: the value will be set as the data-location parameter in topo.ini for the related topology\n",
-    "1. model_source_dir: the value will be set as the model-source-dir parameter in topo.ini for the related topology"
+    "2. model_source_dir: the value will be set as the model-source-dir parameter in topo.ini for the related topology such as Wide and Deep. Those models use tensorflow-models."
    ]
   },
   {
