--- a/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
@@ -30,6 +30,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ignore all warning messages\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from profiling.profile_utils import PlatformUtils\n",
     "plat_utils = PlatformUtils()\n",
     "plat_utils.dump_platform_info()"
@@ -62,10 +73,11 @@
     "print (\"We are using Tensorflow version\", tf.__version__)\n",
     "major_version = int(tf.__version__.split(\".\")[0])\n",
     "if major_version >= 2:\n",
-    "   from tensorflow.python import _pywrap_util_port\n",
-    "   print(\"MKL enabled:\", _pywrap_util_port.IsMklEnabled())\n",
+    "    from tensorflow.python import _pywrap_util_port\n",
+    "    on_mkl = _pywrap_util_port.IsMklEnabled()\n",
     "else:\n",
-    "   print(\"MKL enabled:\", tf.pywrap_tensorflow.IsMklEnabled())"
+    "    on_mkl = tf.pywrap_tensorflow.IsMklEnabled()\n",
+    "print(\"MKL enabled:\", on_mkl)"
    ]
   },
   {
@@ -90,8 +102,11 @@
    "source": [
     "import sys\n",
     "from profiling.profile_utils import ConfigFile\n",
+    "\n",
+    "accuracy_only=False\n",
+    "\n",
     "config = ConfigFile()\n",
-    "sections = config.read_section()\n",
+    "sections = config.read_supported_section(accuracy_only=accuracy_only)\n",
     "print(\"Supported topologies: \")\n",
     "index =0 \n",
     "for section in sections:\n",
@@ -245,8 +260,7 @@
     "3. num_inter_threads: the value will  apply to the num-inter-threads parameter in launch_benchmark.py \n",
     "4. num_intra_threads: the value will  apply to the num-intra-threads parameter in launch_benchmark.py \n",
     "5. batch_size: the value will apply to the batch_size parameter in launch_benchmark.py \n",
-    "6. log_folder: the folder where the logs are stored.\n",
-    "7. accuracy_only : mark as True if users want to evaluate model accuracy"
+    "6. log_folder: the folder where the logs are stored."
    ]
   },
   {
@@ -256,7 +270,6 @@
    "outputs": [],
    "source": [
     "## USER INPUT\n",
-    "accuracy_only=False\n",
     "thread_number=cpu_count \n",
     "utilized_socket_number=1 #cpu_socket_count\n",
     "num_inter_threads = utilized_socket_number\n",
@@ -282,7 +295,7 @@
     "# Get the parameters from config\n",
     "config = ConfigFile()\n",
     "config.read_config(topology_name)\n",
-    "if config.data_download != '' and accuracy_only == True:\n",
+    "if config.data_download != '' and config.data_location == '':\n",
     "    print(\"\\nPlease follow below command to get the data : \")\n",
     "    val = config.read_value_from_section(topology_name, 'data-download')\n",
     "    print(val)\n",
@@ -297,7 +310,8 @@
    "metadata": {},
    "source": [
     "#### ACTION: Users set the configuration in topo.ini for those required data and files\n",
-    "1. data_download_path: the value will be set as data-location parameters in topo.ini for the related topology"
+    "1. data_download_path: the value will be set as data-location parameters in topo.ini for the related topology.\n",
+    "2. model_source_dir: the value will be set as the model-source-dir parameter in topo.ini for the related topology such as Wide and Deep. Those models use tensorflow-models."
    ]
   },
   {
@@ -569,7 +583,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls -l -h $ModelZooRoot/benchmarks/*.json;ls -l -h $ModelZooRoot/docs/notebooks/perf_analysis/*.json"
+    "from profiling.profile_utils import CommonUtils\n",
+    "utils = CommonUtils()\n",
+    "paths = []\n",
+    "paths.append(os.environ['ModelZooRoot']+os.sep + \"benchmarks\")\n",
+    "paths.append(os.environ['ModelZooRoot']+os.sep + \"docs/notebooks/perf_analysis\")\n",
+    "pattern = \"*.json\"\n",
+    "timeline_files, timeline_paths = utils.found_files_in_folders(pattern, paths)\n",
+    "if timeline_paths == []:\n",
+    "    print(\"No %s files found\" %(pattern))\n",
+    "else:\n",
+    "    print(timeline_paths)"
    ]
   },
   {
@@ -602,7 +626,8 @@
     "# inference  throughput\n",
     "perfp.draw_perf_diag_from_csv(csv_fname,'throughput','throughput (image/sec)', topology_name)\n",
     "perfp.draw_perf_ratio_diag_from_csv(csv_fname,'throughput','speedup', topology_name)\n",
-    "perfp.draw_perf_diag_from_csv(csv_fname,'accuracy','accuracy', topology_name)"
+    "if accuracy_only == True:\n",
+    "    perfp.draw_perf_diag_from_csv(csv_fname,'accuracy','accuracy', topology_name)"
    ]
   },
   {
@@ -620,7 +645,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir Timeline; mv $ModelZooRoot/benchmarks/*.json Timeline;mv $ModelZooRoot/docs/notebooks/perf_analysis/*.json Timeline;mv Timeline Timeline_$(date +%m%d%H%M)"
+    "import shutil\n",
+    "import datetime\n",
+    "from profiling.profile_utils import CommonUtils\n",
+    "utils = CommonUtils()\n",
+    "\n",
+    "if timeline_paths != []:\n",
+    "    timeline_dir_path = os.environ['ModelZooRoot']+os.sep + \"docs/notebooks/perf_analysis\" + os.sep + \"Timeline\"\n",
+    "    if os.path.isfile(timeline_dir_path) == False:\n",
+    "        os.mkdir(timeline_dir_path)\n",
+    "    for path in timeline_paths:\n",
+    "        shutil.move(path,timeline_dir_path)\n",
+    "    # rename Timeline folder with topo and time info   \n",
+    "    timeinfo = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M\")\n",
+    "    target_path = timeline_dir_path+'_'+timeinfo\n",
+    "    shutil.move(timeline_dir_path, target_path)\n",
+    "    print(target_path)"
    ]
   },
   {
